<resources>
    <string name="app_name">mercado-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cliente">Cliente</string>
    <string name="produtos">Produtos</string>
    <string name="clientes">Clientes</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="sair">Sair</string>
    <string name="listagem">Listagem</string>
    <string name="cadastro">Cadastro</string>
    <string name="voltar">Voltar</string>
    <string name="nome">Nome</string>
    <string name="confirmar">Confirmar</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="endere_o">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="descri_o">Descrição</string>
    <string name="pre_o">Preço</string>
</resources>