<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        app:alignmentMode="alignBounds"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rowOrderPreserved="false"
        app:useDefaultMargins="false">

        <Button
            android:id="@+id/clientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/clientes"
            android:onClick="clientActivity"
            app:cornerRadius="0dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/supplierButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/fornecedores"
            android:onClick="supplierActivity"
            app:cornerRadius="0dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/productButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/produtos"
            android:onClick="productActivity"
            app:cornerRadius="0dp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="0" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sair"
            app:cornerRadius="0dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="630dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>